--- a/lang/id.json
+++ b/lang/id.json
@@ -1101,6 +1101,7 @@
     "Åland Islands": "Pulau Aland",
     "Create New": "Buat Baru",
     "Gazetter Name": "Nama Gazetter",
+    "Element Name": "Unsur",
     "Previous Name": "Nama Sebelumnya",
     "Alias": "Nama Lain",
     "Primary Coordinate": "Koordinat Utama",
